--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://yshgpta.github.io/dream_app",
   "name": "signup",
   "version": "0.1.0",
   "private": true,
@@ -13,9 +14,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^1.2.0",
     "jquery": "^3.3.1",
     "react-bootstrap": "^0.32.1",
     "react-router-dom": "^4.3.1",
