--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/spotify-web-playback-sdk": "^0.1.2",
+    "babel-plugin-react-svg": "^2.1.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "clarifai": "^2.7.1",
     "jssor-slider": "^27.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-particles-js": "^2.2.0",
-    "react-svg-draw": "0.0.11"
+    "react-svg-draw": "0.0.11",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
